test/resources/execution/failing/Array6.grading.amy
object Array6
 val i:Boolean[] = new Boolean[0]; 0
end Array6